# api/swagger/application.swagger.json
@@ -304,74 +304,6 @@
           "Application"
         ]
       }
-    },
-    "/api/applications/{id}/test-payload-decoder": {
-      "post": {
-        "summary": "TestPayloadDecoder tests the payload decoder for the given application.",
-        "operationId": "TestPayloadDecoder",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/apiTestPayloadDecoderResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiTestPayloadDecoderRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Application"
-        ]
-      }
-    },
-    "/api/applications/{id}/test-payload-encoder": {
-      "post": {
-        "summary": "TestPayloadEncoder tests the payload encoder for the given application.",
-        "operationId": "TestPayloadEncoder",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/apiTestPayloadEncoderResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiTestPayloadEncoderRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Application"
-        ]
-      }
     }
   },
   "definitions": {
@@ -574,52 +506,6 @@
             "$ref": "#/definitions/apiIntegrationKind"
           },
           "description": "The integration kinds associated with the application."
-        }
-      }
-    },
-    "apiTestPayloadDecoderRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64",
-          "description": "The id of the application."
-        },
-        "data": {
-          "type": "string",
-          "description": "HEX encoded bytes."
-        }
-      }
-    },
-    "apiTestPayloadDecoderResponse": {
-      "type": "object",
-      "properties": {
-        "json": {
-          "type": "string",
-          "description": "JSON string representation of the decoded data."
-        }
-      }
-    },
-    "apiTestPayloadEncoderRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64",
-          "description": "The id of the application."
-        },
-        "json": {
-          "type": "string",
-          "description": "JSON string representation of the data to encode."
-        }
-      }
-    },
-    "apiTestPayloadEncoderResponse": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "type": "string",
-          "description": "HEX encoded bytes."
         }
       }
     },
